# app/readium-backend/src/main/java/com/br/klaus/readium/collection/api/dto/UpdateBookCollectionsRequestDTO.java
@@ -1,0 +1,12 @@
+package com.br.klaus.readium.collection.api.dto;
+
+import jakarta.validation.constraints.NotNull;
+
+import java.util.List;
+
+public record UpdateBookCollectionsRequestDTO(
+        @NotNull
+        List<Long> collectionIds
+) {
+}
+
